--- a/src/components/home/section-slider.html
+++ b/src/components/home/section-slider.html
@@ -12,10 +12,10 @@
                     <div class="swiper-slide">
                         <div class="slide-card">
                             <div class="slide-card__wrapper">
-                                <div class="slide-card__img">
+                                <a href="#" class="slide-card__img">
                                     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                          data-src="img/slider1.png" alt="">
-                                </div>
+                                </a>
                                 <div class="slide-card__img-sale">
                                     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                          data-src="img/badge-sale.png" alt="">
@@ -67,10 +67,121 @@
                     <div class="swiper-slide">
                         <div class="slide-card">
                             <div class="slide-card__wrapper">
-                                <div class="slide-card__img">
+                                <a href="#" class="slide-card__img">
                                     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-                                         data-src="img/slider1.png" alt="">
+                                         data-src="img/slider2.png" alt="">
+                                </a>
+                                <div class="slide-card__img-sale">
+                                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+                                         data-src="img/badge-sale.png" alt="">
                                 </div>
+                                <div class="slide-card__rate">
+                                    <div class="slide-card-copy">
+                                        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+                                             data-src="img/copy-icon.svg" alt="">
+                                        <p>Код: 676954</p>
+                                    </div>
+                                    <div class="slide-card-rate">
+                                        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+                                             data-src="img/rating-icon.svg" alt="">
+                                        <p>8 вiдгукiв</p>
+                                    </div>
+                                </div>
+                                <h4 class="slide-card__title">WinTac Підсумок під флягу (пляшку, термос) універсальний Cordura ...</h4>
+                                <div class="slide-card-avail">
+                                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+                                         data-src="img/yea-icon.svg" alt="">
+                                    <p>В наявності</p>
+                                </div>
+                                <div class="slide-card-price">
+                                    <p class="slide-card-price__now">1 780 ₴</p>
+                                    <p class="slide-card-price__sale">
+                                        8 780 ₴
+                                        <span class="slide-card-price__discount">-20%</span>
+                                    </p>
+                                </div>
+                                <div class="slide-card-btns">
+                                    <button class="slide-card__buy">
+                                        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+                                             data-src="img/cart-icon.svg" alt="">
+                                        <p>Купити</p>
+                                    </button>
+                                    <button class="slide-card__like">
+                                        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+                                             data-src="img/like-icon.svg" alt="">
+                                    </button>
+                                    <button class="slide-card__compare">
+                                        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+                                             data-src="img/so-icon.svg" alt="">
+                                    </button>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="slide-card">
+                            <div class="slide-card__wrapper">
+                                <a href="#" class="slide-card__img">
+                                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+                                         data-src="img/slider3.png" alt="">
+                                </a>
+                                <div class="slide-card__img-sale">
+                                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+                                         data-src="img/badge-sale.png" alt="">
+                                </div>
+                                <div class="slide-card__rate">
+                                    <div class="slide-card-copy">
+                                        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+                                             data-src="img/copy-icon.svg" alt="">
+                                        <p>Код: 676954</p>
+                                    </div>
+                                    <div class="slide-card-rate">
+                                        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+                                             data-src="img/rating-icon.svg" alt="">
+                                        <p>8 вiдгукiв</p>
+                                    </div>
+                                </div>
+                                <h4 class="slide-card__title">Тактичні брюки PATRIOT UA Edition MTP</h4>
+                                <div class="slide-card-avail">
+                                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+                                         data-src="img/yea-icon.svg" alt="">
+                                    <p>В наявності</p>
+                                </div>
+                                <div class="slide-card-price">
+                                    <p class="slide-card-price__now">1 780 ₴</p>
+                                    <p class="slide-card-price__sale">
+                                        8 780 ₴
+                                        <span class="slide-card-price__discount">-20%</span>
+                                    </p>
+                                </div>
+                                <div class="slide-card-btns">
+                                    <button class="slide-card__buy">
+                                        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+                                             data-src="img/cart-icon.svg" alt="">
+                                        <p>Купити</p>
+                                    </button>
+                                    <button class="slide-card__like">
+                                        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+                                             data-src="img/like-icon.svg" alt="">
+                                    </button>
+                                    <button class="slide-card__compare">
+                                        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+                                             data-src="img/so-icon.svg" alt="">
+                                    </button>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                        <div class="slide-card">
+                            <div class="slide-card__wrapper">
+                                <a href="#" class="slide-card__img">
+                                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+                                         data-src="img/slider4.png" alt="">
+                                </a>
                                 <div class="slide-card__img-sale">
                                     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                          data-src="img/badge-sale.png" alt="">
@@ -122,10 +233,10 @@
                     <div class="swiper-slide">
                         <div class="slide-card">
                             <div class="slide-card__wrapper">
-                                <div class="slide-card__img">
+                                <a href="#" class="slide-card__img">
                                     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                          data-src="img/slider1.png" alt="">
-                                </div>
+                                </a>
                                 <div class="slide-card__img-sale">
                                     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                          data-src="img/badge-sale.png" alt="">
@@ -177,120 +288,10 @@
                     <div class="swiper-slide">
                         <div class="slide-card">
                             <div class="slide-card__wrapper">
-                                <div class="slide-card__img">
+                                <a href="#" class="slide-card__img">
                                     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                          data-src="img/slider1.png" alt="">
-                                </div>
-                                <div class="slide-card__img-sale">
-                                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-                                         data-src="img/badge-sale.png" alt="">
-                                </div>
-                                <div class="slide-card__rate">
-                                    <div class="slide-card-copy">
-                                        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-                                             data-src="img/copy-icon.svg" alt="">
-                                        <p>Код: 676954</p>
-                                    </div>
-                                    <div class="slide-card-rate">
-                                        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-                                             data-src="img/rating-icon.svg" alt="">
-                                        <p>8 вiдгукiв</p>
-                                    </div>
-                                </div>
-                                <h4 class="slide-card__title">Тактичні брюки PATRIOT UA Edition MTP</h4>
-                                <div class="slide-card-avail">
-                                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-                                         data-src="img/yea-icon.svg" alt="">
-                                    <p>В наявності</p>
-                                </div>
-                                <div class="slide-card-price">
-                                    <p class="slide-card-price__now">1 780 ₴</p>
-                                    <p class="slide-card-price__sale">
-                                        8 780 ₴
-                                        <span class="slide-card-price__discount">-20%</span>
-                                    </p>
-                                </div>
-                                <div class="slide-card-btns">
-                                    <button class="slide-card__buy">
-                                        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-                                             data-src="img/cart-icon.svg" alt="">
-                                        <p>Купити</p>
-                                    </button>
-                                    <button class="slide-card__like">
-                                        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-                                             data-src="img/like-icon.svg" alt="">
-                                    </button>
-                                    <button class="slide-card__compare">
-                                        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-                                             data-src="img/so-icon.svg" alt="">
-                                    </button>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="slide-card">
-                            <div class="slide-card__wrapper">
-                                <div class="slide-card__img">
-                                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-                                         data-src="img/slider1.png" alt="">
-                                </div>
-                                <div class="slide-card__img-sale">
-                                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-                                         data-src="img/badge-sale.png" alt="">
-                                </div>
-                                <div class="slide-card__rate">
-                                    <div class="slide-card-copy">
-                                        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-                                             data-src="img/copy-icon.svg" alt="">
-                                        <p>Код: 676954</p>
-                                    </div>
-                                    <div class="slide-card-rate">
-                                        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-                                             data-src="img/rating-icon.svg" alt="">
-                                        <p>8 вiдгукiв</p>
-                                    </div>
-                                </div>
-                                <h4 class="slide-card__title">Тактичні брюки PATRIOT UA Edition MTP</h4>
-                                <div class="slide-card-avail">
-                                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-                                         data-src="img/yea-icon.svg" alt="">
-                                    <p>В наявності</p>
-                                </div>
-                                <div class="slide-card-price">
-                                    <p class="slide-card-price__now">1 780 ₴</p>
-                                    <p class="slide-card-price__sale">
-                                        8 780 ₴
-                                        <span class="slide-card-price__discount">-20%</span>
-                                    </p>
-                                </div>
-                                <div class="slide-card-btns">
-                                    <button class="slide-card__buy">
-                                        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-                                             data-src="img/cart-icon.svg" alt="">
-                                        <p>Купити</p>
-                                    </button>
-                                    <button class="slide-card__like">
-                                        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-                                             data-src="img/like-icon.svg" alt="">
-                                    </button>
-                                    <button class="slide-card__compare">
-                                        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-                                             data-src="img/so-icon.svg" alt="">
-                                    </button>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="slide-card">
-                            <div class="slide-card__wrapper">
-                                <div class="slide-card__img">
-                                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-                                         data-src="img/slider1.png" alt="">
-                                </div>
+                                </a>
                                 <div class="slide-card__img-sale">
                                     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                          data-src="img/badge-sale.png" alt="">
