--- a/src/scss/pages/home/_home-section-name.scss
+++ b/src/scss/pages/home/_home-section-name.scss
@@ -175,7 +175,7 @@ p{
     .tst-home-catalog-wrapper__title::after{
         border-left: 44vw solid rgba(0,0,0,0);
         border-right: 44vw solid rgba(0,0,0,0);
-        border-top: 34vh solid #6c7151;
+        border-top: 28rem solid #6c7151;
         left: 50%;
         top: 0;
         transform: translate(-50%);
